--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
       width: 100%;
       margin: 0 auto;
       padding: 0 1rem; /* Default mobile padding */
-      /* Increase space on larger screens */
     }
     @media (min-width: 768px) {
       .container {
@@ -79,9 +78,7 @@
       }
     }
 
-    /* =========================================
-       HERO BANNER WITH OVERLAY & RETRO FILTER
-    ========================================== */
+    /* HERO BANNER WITH OVERLAY & RETRO FILTER */
     header.hero-banner {
       width: 100%;
       height: 400px; /* Adjust as desired */
@@ -90,8 +87,6 @@
       background: url("images/image05_adam-aiden-hero-banner-with-space-on-left-for-text.png")
                   top right / cover no-repeat;
     }
-
-    /* Retro filter overlay */
     header.hero-banner::after {
       content: "";
       position: absolute;
@@ -99,8 +94,6 @@
       background: rgba(0,0,0,0.2); /* subtle darker overlay for text contrast */
       filter: sepia(0.6) saturate(1.2) hue-rotate(-10deg);
     }
-
-    /* Hero text container */
     .hero-content {
       position: relative; /* so it's not affected by ::after filter */
       display: flex;
@@ -169,25 +162,6 @@
       transform: translateY(-2px);
     }
 
-    /* EMBED CONTAINER FOR TIKTOK */
-    .embed-container {
-      position: relative;
-      width: 100%;
-      max-width: 600px;
-      height: 0;
-      padding-bottom: 177.78%; /* aspect ratio for TikTok */
-      margin: 20px auto;
-    }
-    .embed-container iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 750px;
-      border: none;
-      background-color: black;
-    }
-
     /* DONATION SECTION */
     .donation-section {
       display: flex;
@@ -228,7 +202,6 @@
     footer a:hover {
       text-decoration: underline;
     }
-
   </style>
 </head>
 
@@ -323,46 +296,53 @@
         </div>
       </section>
 
-<!-- SUPPORT SECTION -->
-<section class="section">
-    <h2>Support My Journey</h2>
-    <p>
-      If you'd like to support me, please consider donating to my GoFundMe or following me 
-      on TikTok for more updates.
-    </p>
-  
-    <div class="donation-section">
-      <!-- TikTok Embed -->
-      <div class="embed-container">
-        <iframe
-          src="https://www.tiktok.com/embed/7460211367799393582"
-          style="border:none; overflow:hidden;"
-          scrolling="no"
-          allowfullscreen>
-        </iframe>
-      </div>
-  
-      <!-- GoFundMe Banner (clickable) -->
-      <a href="https://www.gofundme.com/manage/keep-adam-and-his-child-together?fss=1" target="_blank">
-        <img
-          src="images/gofundme_banner.jpg"
-          alt="GoFundMe Banner"
-          style="max-width: 250px; border-radius: 10px;"
-        >
-      </a>
-  
-      <!-- Donation button with icon -->
-      <a
-        class="donation-button"
-        href="https://www.gofundme.com/manage/keep-adam-and-his-child-together?fss=1"
-        target="_blank"
-      >
-        <img src="images/donate_icon.png" alt="Donation icon">
-        Support on GoFundMe
-      </a>
+      <!-- SUPPORT SECTION -->
+      <section class="section">
+        <h2>Support My Journey</h2>
+        <p>
+          If you'd like to support me, please consider donating to my GoFundMe or 
+          following me on TikTok for more updates.
+        </p>
+
+        <div class="donation-section">
+
+          <!-- TikTok Official Embed -->
+          <blockquote 
+            class="tiktok-embed"
+            cite="https://www.tiktok.com/@username/video/7460211367799393582"
+            data-video-id="7460211367799393582"
+            style="max-width: 605px; min-width: 325px;"
+          >
+            <section></section>
+          </blockquote>
+          <!-- TikTok Embed Script -->
+          <script async src="https://www.tiktok.com/embed.js"></script>
+
+          <!-- GoFundMe Banner (clickable) -->
+          <a 
+            href="https://www.gofundme.com/manage/keep-adam-and-his-child-together?fss=1"
+            target="_blank"
+          >
+            <img 
+              src="images/gofundme_banner.jpg" 
+              alt="GoFundMe Banner"
+              style="max-width: 250px; border-radius: 10px;"
+            >
+          </a>
+
+          <!-- Donation button with icon -->
+          <a 
+            class="donation-button"
+            href="https://www.gofundme.com/manage/keep-adam-and-his-child-together?fss=1"
+            target="_blank"
+          >
+            <img src="images/donate_icon.png" alt="Donation icon">
+            Support on GoFundMe
+          </a>
+        </div>
+      </section>
     </div>
-  </section>
-  
+
     <!-- FOOTER -->
     <footer>
       <p>Website by a <a href="https://joerice.me" target="_blank">caring cousin</a> ❤️</p>
