--- a/index.html
+++ b/index.html
@@ -29,198 +29,7 @@
   <meta name="twitter:title" content="Adam Rice | Personal &amp; Professional Overview">
   <meta name="twitter:description" content="Explore Adam Rice's personal journey and professional profile. Support his mission and discover his skills.">
   <meta name="twitter:image" content="images/icon.png">
-  <style>
-    :root {
-      --backgroundColorPrimary: #1a1a1a;
-      --textColorSecondary: #f4f4f4;
-      --highlightColorAccent: #2dce89;
-      --borderColorSection: #4e4e4e;
-    }
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      font-family: Georgia, 'Times New Roman', serif;
-      background-color: var(--backgroundColorPrimary);
-      color: var(--textColorSecondary);
-      text-align: center;
-    }
-    .contentContainer {
-      width: 100%;
-      margin: 0 auto;
-      padding: 0 1rem;
-    }
-    @media (min-width: 768px) {
-      .contentContainer {
-        max-width: 700px;
-        padding: 0 2rem;
-      }
-    }
-    @media (min-width: 1200px) {
-      .contentContainer {
-        max-width: 1000px;
-        padding: 0 3rem;
-      }
-    }
-    header.heroBanner {
-      width: 100%;
-      height: 400px;
-      position: relative;
-      overflow: hidden;
-      background: url("images/image05_adam-aiden-hero-banner-with-space-on-left-for-text.png") top right / cover no-repeat;
-    }
-    header.heroBanner::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(0,0,0,0.2);
-      filter: sepia(0.6) saturate(1.2) hue-rotate(-10deg);
-    }
-    .heroContent {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-      height: 100%;
-      padding: 0 20px;
-      max-width: 50%;
-      margin: 0;
-    }
-    .heroContent h1 {
-      font-size: 2.8rem;
-      margin: 0 0 10px;
-      color: var(--textColorSecondary);
-      text-shadow: 2px 2px 5px rgba(0,0,0,0.6);
-    }
-    .heroContent p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      color: var(--textColorSecondary);
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
-    }
-    .sectionWrapper {
-      padding: 2rem 0;
-    }
-    .sectionContainer {
-      margin: 0 auto;
-      padding: 20px;
-      border: 2px solid var(--borderColorSection);
-      border-radius: 10px;
-      max-width: 700px;
-      width: 100%;
-      margin-bottom: 40px;
-      background-color: transparent;
-    }
-    h2 {
-      margin-top: 0;
-    }
-    .quoteText {
-      font-style: italic;
-    }
-    .aboutMe {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-    }
-    .clickToRevealItem {
-      display: inline-block;
-      padding: 8px 12px;
-      background-color: var(--highlightColorAccent);
-      color: var(--backgroundColorPrimary);
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background-color 0.3s ease, transform 0.3s ease;
-      user-select: none;
-    }
-    .clickToRevealItem:hover {
-      background-color: #25a973;
-      transform: translateY(-2px);
-    }
-    .supportSectionContainer {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px;
-    }
-    .donationButton {
-      display: inline-flex;
-      align-items: center;
-      background-color: var(--highlightColorAccent);
-      color: var(--backgroundColorPrimary);
-      padding: 10px 20px;
-      margin: 10px 0;
-      border-radius: 5px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background-color 0.3s;
-    }
-    .donationButton img {
-      width: 24px;
-      height: auto;
-      margin-right: 8px;
-    }
-    .donationButton:hover {
-      background-color: #25a973;
-    }
-    footer {
-      margin: 30px 0;
-      font-size: 0.9rem;
-    }
-    footer a {
-      color: var(--textColorSecondary);
-      text-decoration: none;
-      font-weight: bold;
-    }
-    footer a:hover {
-      text-decoration: underline;
-    }
-    .formContainer {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
-    .formContainer label {
-      font-weight: bold;
-      margin-bottom: 0.3rem;
-    }
-    .formContainer input,
-    .formContainer textarea {
-      width: 100%;
-      max-width: 100%;
-      padding: 0.6rem;
-      border: 1px solid var(--borderColorSection);
-      border-radius: 5px;
-      font-family: inherit;
-      resize: vertical;
-    }
-    .formContainer button {
-      background-color: var(--highlightColorAccent);
-      color: var(--backgroundColorPrimary);
-      border: none;
-      padding: 0.7rem 1.2rem;
-      border-radius: 5px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    .formContainer button:hover {
-      background-color: #25a973;
-    }
-    .tiktokWrapper {
-      margin: 20px auto;
-      max-width: 605px;
-      width: 100%;
-    }
-  </style>
+  <link rel="stylesheet" href="data/styles.css">
 </head>
 <body>
   <header class="heroBanner">
@@ -268,7 +77,6 @@
             </blockquote>
           </div>
           <script async src="https://www.tiktok.com/embed.js"></script>
-         
           <a class="donationButton" href="https://www.gofundme.com/manage/keep-adam-and-his-child-together?fss=1" target="_blank">
             <img src="images/donate_icon.png" alt="Donation icon">
             Support on GoFundMe
@@ -294,19 +102,6 @@
       <p>Website by a <a href="https://joerice.me" target="_blank">caring cousin</a> ❤️</p>
     </footer>
   </div>
-  <script>
-    const revealItems = document.querySelectorAll('.clickToRevealItem');
-    revealItems.forEach(item => {
-      const defaultTitle = item.getAttribute('data-title');
-      const extraInfo = item.getAttribute('data-extra');
-      item.addEventListener('click', () => {
-        if (item.textContent.includes(':')) {
-          item.textContent = defaultTitle;
-        } else {
-          item.textContent = defaultTitle + ': ' + extraInfo;
-        }
-      });
-    });
-  </script>
+  <script src="data/script.js"></script>
 </body>
 </html>
