cleaned up everything

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <header class="heroBanner">
     <div class="heroContent">
       <h1>Adam Rice</h1>
-      <p>A journey of resilience, growth, and love for my child.</p>
+      <p style="text-align: left; max-width: 300px;">A journey of resilience, growth, and love for my child.</p>
     </div>
   </header>
   <div class="contentContainer">
@@ -44,15 +44,30 @@
         <h2>Welcome</h2>
         <p>Hey, I’m Adam. This site reflects who I am: a dedicated father, a lifelong learner, and someone striving for growth every day. I'm navigating life with resilience, working to build a brighter future for myself and my child.</p>
       </section>
+
       <section class="sectionContainer">
         <h2>Professional Background</h2>
         <p>I have experience in various roles—from customer service to technical troubleshooting. My passion for problem-solving and helping others drives me in every position I hold.</p>
-      </section>
+        <hr>
+        <p>Alongside these roles, I’ve immersed myself in the world of software engineering and entrepreneurship. Previously known as <strong>Tony</strong> before I officially adopted the name Adam, I have spent over a decade building products, optimizing tech solutions, and balancing personal values with professional pursuits.</p>
+        <ul style="text-align:left; max-width:600px; margin:1rem auto;">
+          <li>Launched and scaled two businesses, including <strong>Automately Cloud</strong> (backend platform) and <strong>Dusty Beetles</strong> (e-commerce), each achieving strong community support and user adoption.</li>
+          <li>Contributed to a universal shopping cart project that boosted checkout conversion rates and played a role in Rakuten’s $1 billion acquisition of Ebates.</li>
+          <li>Mentored fellow entrepreneurs as a member of <strong>gALPHA</strong>, focusing on growth strategies and collaboration.</li>
+          <li>Architected cloud solutions to handle high transaction volumes, maintaining up to <strong>99.9% uptime</strong>.</li>
+        </ul>
+        <p>My journey is a blend of resilience, technical leadership, and heartfelt passion. I’m committed to further innovation—both at work and in raising my child with empathy, humility, and readiness for life’s challenges.</p>
+      
+    </section>
+
+
+
       <section class="sectionContainer">
         <h2>Favorite Quotes</h2>
         <p class="quoteText">"The only way out is through."</p>
         <p class="quoteText">"Life is 10% what happens to us and 90% how we react to it."</p>
       </section>
+
       <section class="sectionContainer">
         <h2>About Me (Click each to reveal more)</h2>
         <div class="aboutMe">
@@ -67,6 +82,7 @@
           <div class="clickToRevealItem" data-title="🔗 Building meaningful connections" data-extra="I like to make long-lasting relationships with people.">🔗 Building meaningful connections</div>
         </div>
       </section>
+
       <section class="sectionContainer">
         <h2>Support My Journey</h2>
         <p>If you'd like to support me, please consider donating to my GoFundMe or following me on TikTok for more updates.</p>
@@ -83,6 +99,7 @@
           </a>
         </div>
       </section>
+
       <section class="sectionContainer">
         <h2>Contact Me, Please</h2>
         <blockquote>If you'd like to send me a message or get in touch, please fill out this form below. I'm managing ADHD and navigating challenging child support issues. I have a $300 debt due by January 23, 2025, or I risk jail time. Any support, even $1, would help. Money aside, I really need to know I'm not alone. This is a tough situation, and your words of encouragement mean a lot. Thank you for being here.</blockquote>
